k8s/platform-development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platformservice-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
      - name: platformservice
        image: kiyotakeshiwork/platformservice
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        # ports:
        # - containerPort: <Port>
