k8s/command-development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commandservice-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
      - name: commandservice
        image: kiyotakeshiwork/commandservice:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        # ports:
        # - containerPort: <Port>
---
apiVersion: v1
kind: Service
metadata:
  name: command-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
  - name: commandservice
    protocol: TCP
    port: 80
    targetPort: 80
