k8s/platform-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platformservice-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
      - name: platformservice
        image: kiyotakeshiwork/platformservice:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        # ports:
        # - containerPort: <Port>
---
apiVersion: v1
kind: Service
metadata:
  name: platform-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
