k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  # tempolary over write `localhost` to `kiyotakeshi.test` in /private/etc/hosts
  - host: kiyotakeshi.test
    http:
      paths:
      - path: "/api/platforms"
        pathType: Prefix
        backend:
          service:
            name: platform-clusterip-service
            port: 
              number: 80

      - path: "/api/c/platforms"
        pathType: Prefix
        backend:
          service:
            name: command-clusterip-service
            port: 
              number: 80
